<resources>
    <string name="app_name">Hobbify</string>
    <string name="recipieName">Recipie Name</string>
    <string name="ingredients">Ingredients</string>
    <string name="book_title">Book Title</string>
    <string name="book_author">Book Author</string>
    <string name="number_of_pages">Number of pages</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
</resources>